--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "Uzfn6832Td-Q"
       },
@@ -86,9 +86,9 @@
           "height": 1000
         },
         "id": "zxf986GTTjp4",
-        "outputId": "e867244f-5bdb-424d-c26c-3a24ed6aabd5"
+        "outputId": "c260f578-e660-4ef4-b034-e1a953cbef88"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -129,7 +129,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ca7cde12-3ab6-469b-87b6-851b62629fad\">\n",
+              "  <div id=\"df-80708608-4548-47e7-95eb-e1ff6dd17d44\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -312,7 +312,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca7cde12-3ab6-469b-87b6-851b62629fad')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80708608-4548-47e7-95eb-e1ff6dd17d44')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -363,12 +363,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ca7cde12-3ab6-469b-87b6-851b62629fad button.colab-df-convert');\n",
+              "          document.querySelector('#df-80708608-4548-47e7-95eb-e1ff6dd17d44 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ca7cde12-3ab6-469b-87b6-851b62629fad');\n",
+              "          const element = document.querySelector('#df-80708608-4548-47e7-95eb-e1ff6dd17d44');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -405,9 +405,9 @@
           "height": 299
         },
         "id": "OYsPbFyKU8H0",
-        "outputId": "52f6515a-fd28-403a-d705-bbc2f12533e9"
+        "outputId": "e756be80-4c6b-434c-f29a-a4cbe7eb712f"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-036ebbe8-70e3-44d0-b90b-035e7ccdfee7\">\n",
+              "  <div id=\"df-faa2fcdb-6d27-493b-aee7-26c0b78b5e85\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -613,7 +613,7 @@
               "</table>\n",
               "<p>5 rows × 44 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-036ebbe8-70e3-44d0-b90b-035e7ccdfee7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-faa2fcdb-6d27-493b-aee7-26c0b78b5e85')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -664,12 +664,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-036ebbe8-70e3-44d0-b90b-035e7ccdfee7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-faa2fcdb-6d27-493b-aee7-26c0b78b5e85 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-036ebbe8-70e3-44d0-b90b-035e7ccdfee7');\n",
+              "          const element = document.querySelector('#df-faa2fcdb-6d27-493b-aee7-26c0b78b5e85');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -692,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 4
         }
       ]
     },
@@ -706,9 +706,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bLjGxsvKVvXK",
-        "outputId": "4b9e5a9e-3092-4596-9a94-42237f6790e5"
+        "outputId": "af7cd023-0411-41f4-9125-f39cce800c4c"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +728,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 5
         }
       ]
     },
@@ -740,7 +740,7 @@
       "metadata": {
         "id": "FPBLGBqEac8U"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,19 +778,19 @@
           "height": 629
         },
         "id": "LHjdAEF1Wjis",
-        "outputId": "e77e514c-9732-4b9b-a784-e2631150bfc9"
+        "outputId": "5155fac8-b462-400e-8b3c-6d96b77e4609"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb39be0310>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbfd2782910>"
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -854,9 +854,9 @@
           "height": 526
         },
         "id": "Xb0rFU3VXUk9",
-        "outputId": "d375b840-d2a6-4762-9139-11beb6a7d55b"
+        "outputId": "57fe2006-aef9-4dcc-bdf6-82d4d709acd4"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -907,9 +907,9 @@
           "height": 52
         },
         "id": "fMxLHuufYGX8",
-        "outputId": "d48a8b57-1264-4066-b4d0-2f02b503dc47"
+        "outputId": "832f7bb8-681e-40b6-aff9-1ef85b583d0b"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -928,7 +928,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 9
         }
       ]
     },
@@ -960,9 +960,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9f8ae262-ac75-483f-d6ce-864767eb215e"
+        "outputId": "ecfbd605-2a59-4e75-8ee2-04ca2cfc53da"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +982,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 10
         }
       ]
     },
@@ -1005,9 +1005,9 @@
           "height": 407
         },
         "id": "pMsuufoGDYXS",
-        "outputId": "8a2b3101-e4f2-4cf8-e0cc-552b6f1cf90d"
+        "outputId": "66f33165-3675-47c8-d2f7-f929da47d8f3"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1084,9 +1084,9 @@
           "height": 888
         },
         "id": "PFwBTji5n1dy",
-        "outputId": "d69aad11-9e76-42da-9332-f01f453a026a"
+        "outputId": "cce1c92a-4ba2-40ed-d4c4-0632b33d6af9"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,9 +1163,9 @@
           "height": 336
         },
         "id": "hiBW0H-3B0zb",
-        "outputId": "5fbc460d-5eaa-4084-ce41-8571d08baca3"
+        "outputId": "fe6a00b8-d367-480a-fc8d-1b91ff57e83e"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,31 +1221,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKSGWj_2nuSs",
-        "outputId": "6388ac2d-b396-4026-a22a-a567fff3c49a"
+        "outputId": "ae399d77-f798-486c-87ff-9bb9b24a2c23"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: geopandas in /usr/local/lib/python3.7/dist-packages (0.10.2)\n",
-            "Requirement already satisfied: pyproj>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from geopandas) (3.2.1)\n",
-            "Requirement already satisfied: fiona>=1.8 in /usr/local/lib/python3.7/dist-packages (from geopandas) (1.8.21)\n",
-            "Requirement already satisfied: shapely>=1.6 in /usr/local/lib/python3.7/dist-packages (from geopandas) (1.8.4)\n",
-            "Requirement already satisfied: pandas>=0.25.0 in /usr/local/lib/python3.7/dist-packages (from geopandas) (1.3.5)\n",
-            "Requirement already satisfied: click-plugins>=1.0 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (1.1.1)\n",
-            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (1.15.0)\n",
-            "Requirement already satisfied: cligj>=0.5 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (0.7.2)\n",
-            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (7.1.2)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (57.4.0)\n",
+            "Collecting geopandas\n",
+            "  Downloading geopandas-0.10.2-py2.py3-none-any.whl (1.0 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.0 MB 7.9 MB/s \n",
+            "\u001b[?25hCollecting fiona>=1.8\n",
+            "  Downloading Fiona-1.8.21-cp37-cp37m-manylinux2014_x86_64.whl (16.7 MB)\n",
+            "\u001b[K     |████████████████████████████████| 16.7 MB 46.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: shapely>=1.6 in /usr/local/lib/python3.7/dist-packages (from geopandas) (1.8.4)\n",
+            "Collecting pyproj>=2.2.0\n",
+            "  Downloading pyproj-3.2.1-cp37-cp37m-manylinux2010_x86_64.whl (6.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.3 MB 51.8 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pandas>=0.25.0 in /usr/local/lib/python3.7/dist-packages (from geopandas) (1.3.5)\n",
             "Requirement already satisfied: attrs>=17 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (22.1.0)\n",
-            "Requirement already satisfied: munch in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (2.5.0)\n",
+            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (7.1.2)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (2022.6.15)\n",
+            "Collecting munch\n",
+            "  Downloading munch-2.5.0-py2.py3-none-any.whl (10 kB)\n",
+            "Collecting cligj>=0.5\n",
+            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
+            "Collecting click-plugins>=1.0\n",
+            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (57.4.0)\n",
+            "Requirement already satisfied: six>=1.7 in /usr/local/lib/python3.7/dist-packages (from fiona>=1.8->geopandas) (1.15.0)\n",
             "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->geopandas) (1.21.6)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->geopandas) (2022.2.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->geopandas) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->geopandas) (2022.2.1)\n"
+            "Installing collected packages: munch, cligj, click-plugins, pyproj, fiona, geopandas\n",
+            "Successfully installed click-plugins-1.1.1 cligj-0.7.2 fiona-1.8.21 geopandas-0.10.2 munch-2.5.0 pyproj-3.2.1\n"
           ]
         }
       ]
@@ -1258,7 +1269,7 @@
       "metadata": {
         "id": "ldX4Dc7GqyL9"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1299,7 +1310,7 @@
       "metadata": {
         "id": "zKJwhQhIod80"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1325,19 +1336,19 @@
           "height": 628
         },
         "id": "mpDemu-JsJO8",
-        "outputId": "aa785484-b10d-4aed-aecf-ed346de0461b"
+        "outputId": "44063912-ba84-4d4d-cf99-22838109c07c"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbb45aa0550>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbfc5b80410>"
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -1372,7 +1383,7 @@
       "metadata": {
         "id": "yue4u26cgl39"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1397,7 +1408,7 @@
       "metadata": {
         "id": "QDRYgd39g89i"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1414,9 +1425,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S9cF2QXOhQuW",
-        "outputId": "4651374e-31a3-4b54-822e-6e3bf78ab92e"
+        "outputId": "be7250f0-4cdf-4c45-f57a-95280d0bb7df"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1429,7 +1440,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 20
         }
       ]
     },
